--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <li>Content Creation</li>
         <li>Project Management Tools</li>
         <li>Adobe Photoshop</li>
-        <li>Google Analytics</li>
+        <li>Fronted Web Development</li>
       </ul>
     </div>
     <div>
