--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>Norazly Basarian</h1>
-    <p> 📧 <a href="mailto:azly@nbasarian.com">azly@nbasarian.com</a> | 🌐 <a href="https://nbasarian.com" target="_blank">nbasarian.com</a></p>
+    <p> 📧 <a href="mailto:azly@nbasarian.com">azly@nbasarian.com</a> | 🌐 <a href="https://nbasarian.com" target="_blank">nbasarian.com</a> | 📍 <a Kota Kinabalu, Sabah<a/></p>
   </header>
 
   <section class="summary">
