--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Norazly Basarian | Resume</title>
+  <title>Azly Basarian | Resume</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <header>
-    <h1>Norazly Basarian</h1>
+    <h1>Azly Basarian</h1>
     <p> 📧 <a href="mailto:azly@nbasarian.com">azly@nbasarian.com</a> | 🌐 <a href="https://nbasarian.com" target="_blank">nbasarian.com</a> | 📍 <a>Kota Kinabalu, Sabah</a></p>
   </header>
 
@@ -83,7 +83,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Norazly Basarian | <a href="mailto:azly@nbasarian.com">azly@nbasarian.com</a></p>
+    <p>&copy; 2025 Azly Basarian</p>
   </footer>
 </body>
 </html>
